--- a/.github/workflows/htmlvalidator.yml
+++ b/.github/workflows/htmlvalidator.yml
@@ -1,2 +1,10 @@
-- name: HTML5 Validator
-  uses: Cyb3r-Jak3/html5validator-action@v0.4.2
+name: Validate HTML
+on: [pull_request]
+jobs:
+  html-validate:
+    runs-on: ubuntu-latest
+    steps:
+      - name: HTML5 Validator
+        uses: Cyb3r-Jak3/html5validator-action@v0.4.2
+        with:
+          root: wwwroot
