--- a/.github/workflows/htmlvalidator.yml
+++ b/.github/workflows/htmlvalidator.yml
@@ -4,5 +4,10 @@ jobs:
   html-validate:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: HTML5 Validator
         uses: Cyb3r-Jak3/html5validator-action@v0.4.2
+        with:
+          root: wwwroot
+          log_level: INFO
+          css: true
