--- a/.github/workflows/htmlvalidator.yml
+++ b/.github/workflows/htmlvalidator.yml
@@ -10,9 +10,5 @@ jobs:
         with:
           root: wwwroot
           log_level: INFO
+          format: text
           css: true
-        continue-on-error: true
-      - uses: actions/upload-artifact@v2
-        with:
-          name: log
-          path: log.log
