--- a/.htaccess
+++ b/.htaccess
@@ -10,3 +10,5 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
 RewriteRule ^(.*)$ /build/index.html [L]
+
+Header always set X-FRAME-OPTIONS "DENY"
